5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1636_2449.log
== TEST (2019-04-12 12:38:23) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/a*e-b*d
y=(a*f-c*d)/a*e-b*d
if(a*e-b*d!=):
	print(x)
	print(y)
else:
	print("nao tem solução")
-- ERROR:
File "XXXX", line 9
    if(a*e-b*d!=):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:38:31) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/a*e-b*d
y=(a*f-c*d)/a*e-b*d
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solução")
-- OUTPUT:
nao tem solução
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:38:43) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/a*e-b*d
y=(a*f-c*d)/a*e-b*d
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solução")
-- EXECUTION TIME:
0.17343
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 13, in <module>
    print("nao tem solu\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 12-13: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:39:06) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/a*e-b*d
y=(a*f-c*d)/a*e-b*d
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- EXECUTION TIME:
0.139073
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
400.0
-3692.0
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-4853.333333333333
-9242.666666666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:41:32) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/a*e-b*d
y=(a*f-c*d)/a*e-b*d
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:41:42) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/a*e-b*d
y=(a*f-c*d)/a*e-b*d
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- EXECUTION TIME:
0.141022
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
400.0
-3692.0
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-4853.333333333333
-9242.666666666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:41:49) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/a*e-b*d
y=(a*f-c*d)/a*e-b*d
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- OUTPUT:
nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:42:13) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:42:21) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- EXECUTION TIME:
0.152394
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:42:25) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- EXECUTION TIME:
0.160976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:42:27) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:42:37) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("nao tem solucao")
-- EXECUTION TIME:
0.194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:42:53) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.192904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:44:57) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:45:03) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:45:12) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.125802
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:45:20) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:45:47) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:47:22) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:47:22) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.123367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:49:53) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=and>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.215409
-- ERROR:
  File "/home/codebench/codes/1636/2449/main.py", line 9
    if(a*e-b*d!=and>0):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:49:55) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=and>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if(a*e-b*d!=and>0):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:50:05) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=,and,>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 9
    if(a*e-b*d!=,and,>0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:50:42) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.163048
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:50:44) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:51:24) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0 and a*e-b*d>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.194463
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:51:26) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0 and a*e-b*d>0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:51:38) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0 and a*e-b*d>=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.141307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 12:51:44) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 12:51:53) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.173203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:07:20) 
-- CODE:
a=float(input("c1: "))
b=float(input("c2: "))
c=float(input("c3: "))
d=float(input("c4: "))
e=float(input("c5: "))
f=float(input("c6: "))
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(a*e-b*d!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.171977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
